# rinha-fastapi

./: .gitignore  Dockerfile  README.md  compose.yml  init.sql  nginx.conf  pyproject.toml
app/: main.py
