[tool.poetry]
name = "rinha-fastapi"
version = "0.1.0"
description = ""
authors = ["Marcus Tenório"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.10"}
redis = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
